build.gradle update

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation 'co.elastic.clients:elasticsearch-java:8.5.0'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-client:8.5.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'jakarta.json:jakarta.json-api:2.1.1'
